--- a/usar-o-cupom.html
+++ b/usar-o-cupom.html
@@ -45,7 +45,7 @@ h2 {
    </style>
    
     <title>Desconto aplicado...</title>
-    <meta http-equiv="refresh" content="3; URL='https://ev.braip.com/ref?pv=promxwdk&af=afi6nemjg&src=CUPOM-DC'"/>
+    <meta http-equiv="refresh" content="3; URL='https://ev.braip.com/ref?pl=planmnlq&ck=cheq4478&af=afi6nemjg'"/>
 </head>
 <body>
 <!-- Google Tag Manager (noscript) -->
