--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@
     content="A fórmula do Insuglico contém uma exclusiva fórmula com tecnologia avançada e importada para melhorar o dia a dia de diabéticos com uma ótima absorção no organismo.">
   <meta name="keywords" content="cupom, desconto, Insuglico">
 
-  <link rel="alternate" href="https://insuglico.desconto.click" hreflang="pt-br" />
-  <link rel=“canonical” href=“https://insuglico.desconto.click” />
+  <link rel="alternate" href="https://insuglico.aprovamos.online" hreflang="pt-br" />
+  <link rel=“canonical” href=“https://insuglico.aprovamos.online” />
 
 
   <!-- // INICIO SNIPPET PRODUTO // -->
@@ -299,7 +299,7 @@
     "@type": "Product",
     "name": "Insuglico",
     "image": [
-      "https://images.desconto.click/insuglico.webp"
+      "https://images.aprovamos.online/insuglico.webp"
      ],
     "description": "A fórmula do Insuglico contém uma exclusiva fórmula com tecnologia avançada e importada para melhorar o dia a dia de diabéticos com uma ótima absorção no organismo, deixando seus dias com mais energia e disposição com o controle da diabetes.",
     "sku": "",
@@ -327,7 +327,7 @@
     },
     "offers": {
       "@type": "Offer",
-      "url": "https://insuglico.desconto.click/",
+      "url": "https://insuglico.aprovamos.online/",
       "priceCurrency": "BRL",
       "price": "197.00",
       "priceValidUntil": "2026-12-25",
@@ -389,7 +389,7 @@
 
     <div class="containerzao">
       <div class="imagem"> <a href="usar-o-cupom.html" alt="OFERTA" title="COMPRE BARATO"><img
-            src="https://images.desconto.click/insuglico.webp" alt="Insuglico" width="174" height="280"></a></div>
+            src="https://images.aprovamos.online/insuglico.webp" alt="Insuglico" width="174" height="280"></a></div>
 
       <div class="descricao">
         <p>A fórmula do Insuglico contém uma exclusiva fórmula com tecnologia avançada e importada para melhorar o dia a dia de diabéticos com uma ótima absorção no organismo, deixando seus dias com mais energia e disposição com o controle da diabetes.
@@ -811,14 +811,14 @@
 
   <footer class="container-footer">
     <div class="text-rodape">
-      <div class="a"><a href="https://desconto.click/termos.html" class="text-rodape">Termos de Uso</a> | <a
-          href="https://desconto.click/privacidade.html" class="text-rodape">Política de Privacidade</a> | <a
-          href="https://desconto.click/" class="text-rodape">Mais Cupons</a>
+      <div class="a"><a href="https://aprovamos.online/termos.html" class="text-rodape">Termos de Uso</a> | <a
+          href="https://aprovamos.online/privacidade.html" class="text-rodape">Política de Privacidade</a> | <a
+          href="https://aprovamos.online/" class="text-rodape">Mais Cupons</a>
         </div>
     </div>
     <div class="container-footer">
       <div class="text-rodape">
-        <h4> Desconto.Click © Todos os direitos reservados.</h4>
+        <h4> aprovamos.online © Todos os direitos reservados.</h4>
       </div>
     </div>
   </footer>
